Allow universal CORS for Vercel deployment